2007-10-21  Marcus Meissner  <marcus@jet.franken.de>

	* gphoto2/gphoto2-filesys.h: Change long
	  to uint64_t, int to uint32_t to fix the struct
	  sizes to a better known value (mostly for C#).
	  Include <stdint.h>, a ISO C99 feature.

	  This changes the "CameraFileInfo" and "CameraStorageInformation"
	  struct sizes on all platforms.

2007-10-16  Marcus Meissner  <marcus@jet.franken.de>

	* libgphoto2/gphoto2-list.c: Removed artificial limit 
	  on entries in CameraList (now dynamic) and also
	  the artificial limit on name/value (now dynamic).

	  This is source code compatible, but not ABI compatible.

	  Bumped SO version to 6 (with libtool increment rules).

2007-07-25  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added Kodak Z712 IS

2007-06-21  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added Canon A560

2007-05-28  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added Nikon Coolpix L10.

2007-05-27  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added Canon A570 IS.

2007-05-05  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: Added FujiFilm F40 fd
	http://gphoto.org/bugs/?id=1713438

2007-04-08  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/directory/directory.c: added more RAW types.
	Should fix bug #1696551
	http://gphoto.org/bugs/?id=1696551

2007-03-01  Marcus Meissner  <marcus@jet.franken.de>
	    Theodore Kilgore <kilgota@banach.math.auburn.edu>

	* libgphoto2/bayer.{c,h}: Enhanced bayer algorithm.

2007-01-31  Hubert Figuiere  <hub@figuiere.net>

	* camlibs/ptp2/library.c: added Coolpix P4.
	added Kodak P880

2007-01-21  Marcus Meissner  <marcus@jet.franken.de>

	* libgphoto2/gphoto2-filesys.c: 
	  Bugfixes for LRU double linked list handling.

2007-01-03  Hubert Figuiere  <hub@figuiere.net>

	* libgphoto2_port/disk/disk.c (gp_port_library_list): handle
	automounter properly when there is no HAL.
